fixed site logo placement on mobile

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -48,8 +48,8 @@
         max-height: none;
     }
 
-    .site-logo {
-        position:relative;
+    #site-logo {
+        position: static;
         padding: 0;
     }
 
